# Copyright (c) Hathor Labs and its affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[tool.poetry]
name = "tx-mining-service"
version = "0.11.0"
description = "Service to mine transactions"
authors = ["Hathor Team <contact@hathor.network>"]
license = "MIT"
readme = "README.md"
homepage = "https://hathor.network/"
repository = "https://github.com/HathorNetwork/tx-mining-service/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ConfigArgParse = "^1.2.3"
colorama = "^0.4.4"
aiohttp = "~3.8.3"
base58 = "~2.1.1"
structlog = "~22.3.0"
prometheus-client = "^0.9.0"
idna_ssl = "^1.1.0"
asynctest = "^0.13.0"
hathorlib = {version = "^0.5.1", extras = ["client"]}
dataclasses = {version = "^0.8", python = ">=3.6,<3.7"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
isort = "~5.10.1"
mypy = "^1.0.0"
numpy = "^1.19.4"
pytest = "~7.2.0"
pytest-aiohttp = "^0.3.0"
pytest-cov = "~4.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

