# Copyright (c) Hathor Labs and its affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[tool.poetry]
name = "tx-mining-service"
version = "0.23.0"
package-mode = false
description = "Service to mine transactions"
authors = ["Hathor Team <contact@hathor.network>"]
license = "MIT"
readme = "README.md"
homepage = "https://hathor.network/"
repository = "https://github.com/HathorNetwork/tx-mining-service/"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ConfigArgParse = "^1.2.3"
colorama = "^0.4.4"
aiohttp = "~3.9.3"
base58 = "~2.1.1"
structlog = "~22.3.0"
prometheus-client = "^0.9.0"
idna_ssl = "^1.1.0"
# Cap required: setuptools >=82 removed pkg_resources, which is used by pycoin (a transitive dep via hathorlib)
setuptools = ">=68.0,<82"
hathorlib = {path = "../hathor-core-4/hathorlib", develop = true, extras = ["client"]}
python-healthchecklib = "^0.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
isort = "~5.10.1"
mypy = "^1.0.0"
numpy = "^1.26.0"
pytest = "~7.2.0"
pytest-aiohttp = "^0.3.0"
pytest-cov = "~4.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

